force-app/main/default/objects/Prestamo__c/Prestamo__c.object-meta.xml
<CustomObject>
    <label>Prestamo</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ID Prestamo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prestamos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>