force-app/main/default/objects/Prestamo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <defaultValue>&quot;En Préstamo&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Préstamo</fullName>
                <default>true</default>
                <label>En Préstamo</label>
            </value>
            <value>
                <fullName>Retrasado</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>