force-app/main/default/objects/Prestamo__c/fields/Libro__c.field-meta.xml
<CustomField>
    <fullName>Libro__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Libro</label>
    <referenceTo>libro__c</referenceTo>
    <relationshipLabel>Prestamos</relationshipLabel>
    <relationshipName>Prestamos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>