force-app/main/default/objects/Prestamo__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Prestamos</relationshipLabel>
    <relationshipName>Prestamos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>