force-app/main/default/objects/Prestamo__c/recordTypes/RegistroAgenteBiblioteca.recordType-meta.xml
<RecordType>
    <fullName>RegistroAgenteBiblioteca</fullName>
    <active>true</active>
    <description>Tipo de registro para el agente de biblioteca.</description>
    <label>Prestamo</label>
</RecordType>